--- a/1_of_n/UnitTestProject1/UnitTestProject1.csproj
+++ b/1_of_n/UnitTestProject1/UnitTestProject1.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Calculator.cs" />
+    <Compile Include="IStringCalculator.cs" />
     <Compile Include="RegExValueExtractor.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
